src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__edition_details_ui__edition_details_ui_tests__tests__snapshot_tests__edition_details_ui_renders_scrolled.snap
---
source: src/ui/readarr_ui/library/edition_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭───────────────────────────────────────────────────  Edition Details  ────────────────────────────────────────────────────╮                     
                    │Language: English                                                                                                         │                     
                    │Publisher: DAW Books                                                                                                      │                     
                    │Page Count: 288                                                                                                           │                     
                    │Release Date: 2023-05-20 00:00:00 UTC                                                                                     │                     
                    │ISBN13: 9780756404079                                                                                                     │                     
                    │ASIN: B0043RSJ9S                                                                                                          │                     
                    │Ratings: 4.5 (1000 votes)                                                                                                 │                     
                    │Monitored: true                                                                                                           │                     
                    │Overview: original cover of ISBN 075640407X                                                                               │                     
                    │                                                                                                                          │                     
                    │My name is Kvothe, pronounced nearly the same as "quothe."                                                                │                     
                    │                                                                                                                          │                     
                    │The Adem call me Maedre: which means The Flame.                                                                           │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
